# UK-AI-Evaluation

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: README.md
docs/adr/: ADR-000-template.md  ADR-001-repo-structure-and-tooling.md  ADR-002-licensing.md  ADR-003-adversarial-battery.md
docs/methodology/: assurance-methodology-v0.1.md
docs/runbooks/: run-adversarial-battery.md
evals/: README.md
evals/datasets/adversarial-battery-v1/: README.md  battery.jsonl
evals/scripts/: export_results.py  make_demo_results.py
evals/tasks/adversarial_battery/: README.md  adversarial_battery.py
evals/tasks/smoke/: README.md  smoke.py
infra/: README.md
redteam/: README.md
reports/: README.md
reports/clinician-review/: README.md  index.html  results.demo.json
reports/templates/: assurance-report-skeleton.md
tests/: test_adversarial_battery.py  test_smoke_task.py
